wayland/frog color management: restore pass through behavior

The previous code emulated "pass through" behavior by adjusting the reference luminance to
the preferred color description's reference luminance, but that doesn't work out in all
situations, like when the preferred color description changes but the client doesn't commit
any color management changes on its surface.
This approach fixes that by just adding a boolean flag for this pass through mode to the
color description, and setting it in the protocol implementation.

This commit is 6.2-only, as the master branch has dropped this pass through emulation and
doesn't need such hacks for HDR content to behave properly on settings changes.

BUG: 494134